# FlashPSO

./: .gitignore  :w  README.md  batch.sh  pyproject.toml  pyrightconfig.json
FlashPSO.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
benchmarks/: accuracy.py  accuracy_basket.py  benchmark.py  comparisons.py  core_perf.py  engine.py  exotics.py  flash_pso_bench.py  main.py  models.py  utils.py  wrappers.py
benchmarks/plots/: compute-fraction-sweep.csv  pso-time.csv  pso-vs-lsmc.csv  results.html
flash_pso/: __init__.py  api.py  api_basket.py  asserts.py  config.py  enums.py  flash_pso.py  ideas  mc_kernels.py  pso_kernels.py  pso_utils.py
flash_pso/rng/: sobol.py
flash_pso/sm80/: basket_kernels.py  mc_kernels.py  payoff_kernels.py  pso_kernels.py  pso_utils.py
flash_pso/sm90/: basket_kernels.py  mc_kernels.py  payoff_kernels.py  pso_kernels.py  pso_utils.py
paper/figures/: CPU-GPU Diagram.tex  payoff.tex
references/: benchmarks.py  longstaff.py  mc.py  pso.py  utils.py
references/kernels/pso/scalar/: knl_source_pso_getAmerOption.c
references/kernels/pso/vec/: knl_source_pso_fusion_vec.c  knl_source_pso_getAmerOption_vec.c  knl_source_pso_searchGrid_vec.c  knl_source_pso_updateBests_vec.c
