[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FlashPSO"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Edin Hasanovic" }
]
dependencies = [
    "numpy",
    "scipy",
    "pyopencl",
    "matplotlib",
    "pandas",
    "torch>=2.0.0",
    "triton>=3.6.0",
]

[project.scripts]
# Command to run the entire suite
flash-pso-all = "benchmarks.flash_pso_bench:run_all"

# Commands to run specific isolated tests
flash-pso-single = "benchmarks.flash_pso_bench:run_single"
flash-pso-baseline = "benchmarks.flash_pso_bench:run_baseline"
flash-pso-fractions = "benchmarks.flash_pso_bench:run_fraction_sweep"
flash-pso-scaling = "benchmarks.flash_pso_bench:run_particle_scaling"
flash-pso-accuracy = "benchmarks.flash_pso_bench:run_accuracy"

[tool.setuptools]
packages = ["benchmarks", "references", "flash_pso"]

[tool.setuptools.package-data]
"*" = ["**/*.cl", "**/*.cu"]
