[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FlashPSO"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Edin Hasanovic" }
]
dependencies = [
    "numpy",
    "scipy",
    "pyopencl",
    "matplotlib",
    "pandas",
    "torch>=2.0.0",
    "triton>=3.6.0",
]

[project.optional-dependencies]
bench = [
    "QuantLib",
    "optlib",
]

[project.scripts]
# Command to run the entire suite
flash-pso-all = "benchmarks.main:run_all"

# Commands to run specific isolated tests
flash-pso-single = "benchmarks.main:run_single"
flash-pso-baseline = "benchmarks.main:run_baseline"
flash-pso-fractions = "benchmarks.main:run_fraction_sweep"
flash-pso-scaling = "benchmarks.main:run_particle_scaling"
flash-pso-accuracy = "benchmarks.main:run_accuracy"
flash-pso-variance = "benchmarks.main:run_variance"      # <--- NEW
flash-pso-latency = "benchmarks.main:run_library_latency"
flash-pso-asian-latency = "benchmarks.main:run_asian_latency"
flash-pso-lsmc-latency = "benchmarks.main:run_lsmc_latency"
flash-pso-basket = "benchmarks.main:run_basket"
flash-basket-variance = "benchmarks.main:run_basket_variance"

[tool.setuptools]
packages = ["benchmarks", "references", "flash_pso"]

[tool.setuptools.package-data]
"*" = ["**/*.cl", "**/*.cu"]
