[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FlashPSO"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Edin Hasanovic" }
]
dependencies = [
    "numpy",
    "scipy",
    "pyopencl",
    "matplotlib",
    "pandas",
    "torch>=2.0.0",
    "triton>=3.6.0",
]

[project.optional-dependencies]
bench = [
    "QuantLib",
    "optlib",
]

[project.scripts]
# Commands to run specific isolated tests
flash-pso-core = "benchmarks.main:run_core_bench"
flash-pso-all = "benchmarks.main:run_all_benchmarks"

[tool.setuptools]
packages = ["benchmarks", "references", "flash_pso"]

[tool.setuptools.package-data]
"*" = ["**/*.cl", "**/*.cu"]
